Bug 490969 - Information about the required gpg setup or error messages are not directly visible
Summary: Information about the required gpg setup or error messages are not directly v...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks: 488491
  Show dependency treegraph
 
Reported: 2024-07-29 10:53 UTC by Ralf Habacker
Modified: 2024-07-29 15:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
Screenshot (81.79 KB, image/png)
2024-07-29 13:43 UTC, Ralf Habacker
Details
Screenshot (74.60 KB, image/png)
2024-07-29 13:45 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2024-07-29 10:53:29 UTC
STEPS TO REPRODUCE
1. Download snapshot for kmymoney from https://cdn.kde.org/ci-builds/office/kmymoney/master/windows/
2. start kmymoney
3. click on menu entry "Settings"->"Configure KMyMoney" -> "Modules
4. Click on the left button in the row "XML storage" (Tooltip: setup)
5. Move the mouse over the checkbox "Activate gpg encryption"

OBSERVED RESULT
Information or error notes are hidden behind the tooltip of the checkbox for activation. 

EXPECTED RESULT
They should be directly visible on the page 

SOFTWARE/OS VERSIONS
Windows: 10
KDE Frameworks Version:  5.115
Qt Version: 5.15
Comment 1 Thomas Baumgart 2024-07-29 13:25:47 UTC
On 4, in git master the tooltip says "Configure" and on 5 (labeled "Use GPG encryption") I don't see a tooltip at all. I must be missing something. What is it? Can you provide a screenshot?
Comment 2 Ralf Habacker 2024-07-29 13:43:47 UTC
Created attachment 172102 [details]
Screenshot

In the event of errors, the problem is displayed as a tooltip in the label of the relevant checkbox. It is therefore only displayed if the user moves the mouse over the label of the checkbox and waits a certain amount of time.
Comment 3 Ralf Habacker 2024-07-29 13:45:33 UTC
Created attachment 172103 [details]
Screenshot

Update
Comment 4 Ralf Habacker 2024-07-29 13:52:27 UTC
(In reply to Ralf Habacker from comment #2)
> In the event of errors, the problem is displayed as a tooltip in the label
> of the relevant checkbox. It is therefore only displayed if the user moves
> the mouse over the label of the checkbox and waits a certain amount of time.

See https://invent.kde.org/office/kmymoney/-/blame/master/kmymoney/plugins/xml/kcm_xmlstorage.cpp?ref_type=heads#L184
Comment 5 Thomas Baumgart 2024-07-29 14:54:58 UTC
Now it makes sense. I don't see it, because I have no errors :)
Comment 6 Thomas Baumgart 2024-07-29 15:13:20 UTC
Git commit 5798904b1f3f6075d5a4cd349858067a6371d13e by Thomas Baumgart.
Committed on 29/07/2024 at 15:12.
Pushed by tbaumgart into branch 'master'.

Present error information in a message widget instead of tooltip

Using a tooltip to provide error causes is not user friendly. This has
been replaced with a message widget which will be shown with the same
information.
FIXED-IN: 5.2

M  +12   -3    kmymoney/plugins/xml/kcm_xmlstorage.cpp
M  +13   -5    kmymoney/plugins/xml/xmlstoragesettings.ui

https://invent.kde.org/office/kmymoney/-/commit/5798904b1f3f6075d5a4cd349858067a6371d13e