Present error information in a message widget instead of tooltip

Using a tooltip to provide error causes is not user friendly. This has
been replaced with a message widget which will be shown with the same
information.

BUG: 490969
FIXED-IN: 5.2